--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -51,8 +51,8 @@
   "phone_already_registered": "Số điện thoại này đã đăng ký tài khoản",
   "login_button": "Đăng nhập",
   "or": "Hoặc",
-  "sign_up_with_apple": "Sign up with Apple",
-  "sign_up_with_google": "Sign up with Google",
+  "sign_up_with_apple": "Đăng nhập với Apple",
+  "sign_up_with_google": "Đăng nhập với Google",
   "no_account_yet": "Bạn chưa có tài khoản Booking Hotel?",
   "register_now_link": "Đăng ký ngay",
   "your_phone_title": "Số điện thoại của bạn",
