--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -438,5 +438,11 @@
   "hour":"Hour",
   "area_room": "Area",
   "bed_type": "Bed Type",
-  "room_direction": "Room Direction"
+  "room_direction": "Room Direction",
+  "confirmation_and_payment":"Confirmation and payment",
+    "phone_required": "Phone number is required",
+    "name_required": "Name is required",
+    "cancel_booking_confirm":"This action cannot be undone. Are you sure you want to cancel this booking?"
+  
+  
 }
